Add LuckPerms integration to handle Discord linking
A new class, ServerLoginNetworkHandlerMixin, was added to handle user authenticity for Discord linking. The LuckPerms permissions library was added as a dependency to manage user permissions and help with their identification. Kotlin module were updated to include LuckPerms version. Also, an exclusive content repository was added to gradle for LuckPerms API lookup. Implementation of LuckPerms was also added to fabric and forge build files. Finally, the discordloom-common.mixins.json was also updated to include the mixin configuration for the newly introduced class.

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,18 @@ allprojects {
         // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
         // See https://docs.gradle.org/current/userguide/declaring_repositories.html
         // for more information about repositories.
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+        exclusiveContent {
+            forRepository {
+                maven {
+                    name = "Modrinth"
+                    url = "https://api.modrinth.com/maven"
+                }
+            }
+            filter {
+                includeGroup "maven.modrinth"
+            }
+        }
     }
 
     tasks.withType(JavaCompile) {
