--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -64,3 +64,9 @@ description='''
    versionRange="[1.19.2,1.20)"
    ordering="NONE"
    side="BOTH"
+[[dependencies.discordloom]]
+   modId="luckperms"
+   mandatory=true
+   versionRange="[0,)"
+   ordering="NONE"
+   side="SERVER"
