--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,6 @@ fabric_loader_version=0.14.21
 fabric_api_version=0.76.0+1.19.2
 yarn_mappings=1.19.2+build.28
 
+luckperms_version=5.4.66
+
 forge_version=1.19.2-43.2.17
