--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -21,6 +21,9 @@ dependencies {
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury-fabric:${rootProject.architectury_version}"
 
+    modImplementation('me.lucko:fabric-permissions-api:0.2-SNAPSHOT')
+    modLocalRuntime("maven.modrinth:luckperms:v${rootProject.luckperms_version}-fabric")
+
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
 }
