Change logging level and comment out problematic code
Made two changes in this commit. First, changed the logging level from 'info' to 'trace' in ServerLoginNetworkHandlerMixin.java file to filter out not very crucial logs. This will be helpful in reducing log pollution during the runtime. Secondly, commented out a problematic line of code in build.gradle file that's causing build failure, it needs further investigation.

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury-forge:${rootProject.architectury_version}"
 
-    modLocalRuntime("maven.modrinth:luckperms:v${rootProject.luckperms_version}-forge")
+    //TODO: find why this doesn't work modLocalRuntime("maven.modrinth:luckperms:v${rootProject.luckperms_version}-forge")
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
