--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     modImplementation('me.lucko:fabric-permissions-api:0.2-SNAPSHOT')
     modLocalRuntime("maven.modrinth:luckperms:v${rootProject.luckperms_version}-fabric")
 
+    include modImplementation("com.discord4j:discord4j-core:3.3.0-M2")
+    include modImplementation("com.discord4j:discord4j-oauth2:3.3.0-M2")
+
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
 }
