--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx4G
 
 minecraft_version=1.19.2
 
@@ -13,5 +13,6 @@ fabric_api_version=0.76.0+1.19.2
 yarn_mappings=1.19.2+build.28
 
 luckperms_version=5.4.66
+forgeconfig_version=4.2.11
 
 forge_version=1.19.2-43.2.17
