"Update integration method for Discord4j libraries in gradle files"
The previous implementation method for Discord4j libraries was changed from modImplementation to api in the common build.gradle and to shadowCommon in the fabric build.gradle file. The change was necessary to improve the exposure of these libraries to other modules and configurations to help with code cohesion and reusability.

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -10,8 +10,8 @@ dependencies {
     compileOnly 'com.electronwill.night-config:toml:3.6.5'
     compileOnly "net.minecraftforge:forgeconfigapiport-fabric:${rootProject.forgeconfig_version}"
 
-    include modImplementation("com.discord4j:discord4j-core:3.3.0-M2")
-    include modImplementation("com.discord4j:discord4j-oauth2:3.3.0-M2")
+    api("com.discord4j:discord4j-core:3.3.0-M2")
+    api("com.discord4j:discord4j-oauth2:3.3.0-M2")
 }
 
 architectury {
