--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -24,8 +24,8 @@ dependencies {
     modImplementation('me.lucko:fabric-permissions-api:0.2-SNAPSHOT')
     modLocalRuntime("maven.modrinth:luckperms:v${rootProject.luckperms_version}-fabric")
 
-    shadowCommon("com.discord4j:discord4j-core:3.3.0-M2")
-    shadowCommon("com.discord4j:discord4j-oauth2:3.3.0-M2")
+    runtimeOnly shadowCommon("com.discord4j:discord4j-core:3.3.0-M2")
+    runtimeOnly shadowCommon("com.discord4j:discord4j-oauth2:3.3.0-M2")
 
     implementation include('com.electronwill.night-config:core:3.6.5')
     implementation include('com.electronwill.night-config:toml:3.6.5')
