--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -41,6 +41,9 @@ shadowJar {
 
     configurations = [project.configurations.shadowCommon]
     archiveClassifier.set("dev-shadow")
+
+    relocate 'io.netty', 'com.discord4j.shaded.io.netty'
+    relocate 'com.fasterxml', 'com.discord4j.shaded.com.fasterxml'
 }
 
 remapJar {
