Migrated to JDA

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     runtimeOnly shadowCommon("com.discord4j:discord4j-core:3.3.0-M2")
     runtimeOnly shadowCommon("com.discord4j:discord4j-oauth2:3.3.0-M2")
 
+    runtimeOnly shadowCommon("net.dv8tion:JDA:${rootProject.jda_version}")
+
     implementation include('com.electronwill.night-config:core:3.6.5')
     implementation include('com.electronwill.night-config:toml:3.6.5')
     modImplementation include("net.minecraftforge:forgeconfigapiport-fabric:${rootProject.forgeconfig_version}")
