--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 
     implementation forgeRuntimeLibrary(compileOnly("com.discord4j:discord4j-core:3.3.0-M2"))
     implementation forgeRuntimeLibrary(compileOnly("com.discord4j:discord4j-oauth2:3.3.0-M2"))
+
+    implementation forgeRuntimeLibrary(compileOnly("net.dv8tion:JDA:${rootProject.jda_version}"))
 }
 
 processResources {
