--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,6 @@ yarn_mappings=1.19.2+build.28
 luckperms_version=5.4.66
 forgeconfig_version=4.2.11
 
+jda_version=5.0.0-beta.13
+
 forge_version=1.19.2-43.2.17
