--- a/gradle.properties
+++ b/gradle.properties
@@ -6,13 +6,12 @@ archives_base_name=discordloom
 mod_version=0.1.1
 maven_group=codes.dreaming
 
-architectury_version=6.5.85
-
 fabric_loader_version=0.14.21
 fabric_api_version=0.76.0+1.19.2
 yarn_mappings=1.19.2+build.28
 
 luckperms_version=5.4.66
-forgeconfig_version=4.2.11
+banhammer_version=0.5.9+1.19.2
+owo_version=0.9.3+1.19
 
 jda_version=5.0.0-beta.13
