--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
     include "io.wispforest:owo-sentinel:${project.owo_version}"
 
+    //annotationProcessor implementation(include("io.github.llamalad7:mixinextras-fabric:${project.mixin_extras_version}"))
+
     // Old Discord integration (still needed for oauth2) TODO: Migrate to JDA
     api shadow("com.discord4j:discord4j-core:3.3.0-M2")
     api shadow("com.discord4j:discord4j-oauth2:3.3.0-M2")
@@ -67,7 +69,7 @@ dependencies {
     }
 
     // Banhammer integration
-    //modApi("maven.modrinth:banhammer:${rootProject.banhammer_version}")
+    modCompileOnly("maven.modrinth:banhammer:${rootProject.banhammer_version}")
 }
 
 processResources {
